// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondRow.vue snapshots: should match if grid status is not custom 1`] = `
<section
  class="hb-row hbr-second"
>
  <header
    class="hbr-header"
  >
    <span
      class="hbr-title"
    >
      Second Row
    </span>
     
    <!---->
  </header>
   
  <div
    class="hbr-container"
  >
    <grid-row-cell-stub
      cellpos="left"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="left"
    >
      
        align: left
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="center"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="center"
    >
      
        align: center
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="right"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="right"
    >
      
        align: right
    
    </cell-footer-stub>
  </div>
</section>
`;

exports[`SecondRow.vue snapshots: should match if the layout position is bottom 1`] = `
<section
  class="hb-row hbr-second"
>
  <header
    class="hbr-header"
  >
    <span
      class="hbr-title"
    >
      Second Row
    </span>
     
    <a
      class="icon-edit"
      href="#"
    >
      <font-icon-stub
        icon="pencil"
      />
    </a>
  </header>
   
  <div
    class="hbr-container"
  >
    <grid-row-cell-stub
      cellpos="left"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="left"
    >
      
        align: left
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="center"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="center"
    >
      
        align: center
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="right"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="right"
    >
      
        align: right
    
    </cell-footer-stub>
  </div>
</section>
`;

exports[`SecondRow.vue snapshots: should match if the layout position is left 1`] = `
<section
  class="hb-row hbr-second"
>
  <header
    class="hbr-header"
  >
    <span
      class="hbr-title"
    >
      Second Row
    </span>
     
    <a
      class="icon-edit"
      href="#"
    >
      <font-icon-stub
        icon="pencil"
      />
    </a>
  </header>
   
  <div
    class="hbr-container"
  >
    <grid-row-cell-stub
      cellpos="all"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="left"
    >
      
        align: bottom
    
    </cell-footer-stub>
        
  </div>
</section>
`;

exports[`SecondRow.vue snapshots: should match if the layout position is right 1`] = `
<section
  class="hb-row hbr-second"
>
  <header
    class="hbr-header"
  >
    <span
      class="hbr-title"
    >
      Second Row
    </span>
     
    <a
      class="icon-edit"
      href="#"
    >
      <font-icon-stub
        icon="pencil"
      />
    </a>
  </header>
   
  <div
    class="hbr-container"
  >
    <grid-row-cell-stub
      cellpos="all"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="left"
    >
      
        align: bottom
    
    </cell-footer-stub>
        
  </div>
</section>
`;

exports[`SecondRow.vue snapshots: should match if the layout position is top 1`] = `
<section
  class="hb-row hbr-second"
>
  <header
    class="hbr-header"
  >
    <span
      class="hbr-title"
    >
      Second Row
    </span>
     
    <a
      class="icon-edit"
      href="#"
    >
      <font-icon-stub
        icon="pencil"
      />
    </a>
  </header>
   
  <div
    class="hbr-container"
  >
    <grid-row-cell-stub
      cellpos="left"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="left"
    >
      
        align: left
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="center"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="center"
    >
      
        align: center
    
    </cell-footer-stub>
     
    <grid-row-cell-stub
      cellpos="right"
      row="secondRow"
    />
     
    <cell-footer-stub
      pos="right"
    >
      
        align: right
    
    </cell-footer-stub>
  </div>
</section>
`;

exports[`SecondRow.vue snapshots: should match if the row is NOT active 1`] = `<!---->`;
